[package]
name = "sleef-shim"
version = "0.1.0"
authors = ["zachmatson <zacharywdmatson@gmail.com>"]
edition = "2018"

[lib]
name = "sleef_shim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
build-sleef = []

[build-dependencies]
cmake = "0.1"
